Introduced build system

--- a/2019_20/AB/exam-notes/notes.tex
+++ b/2019_20/AB/exam-notes/notes.tex
@@ -35,20 +35,20 @@
 \section{The Structure of matter and life}
 \subsection{Types of Bonds}
 \begin{itemize}
-    \item \B{Ionic Bonding}
+    \item \textbf{Ionic Bonding}
     \begin{itemize}
-        \item \B{strong}, $e^-$ transfer
+        \item \textbf{strong}, $e^-$ transfer
         \item between positively and negatively charged ions
         \item ionic compounds mostly crystaline solid
         \item lowest energy state without spare electrons
-        \item e.g. in \B{proteins}
+        \item e.g. in \textbf{proteins}
     \end{itemize}
-    \item \B{Covalent Bonding}
+    \item \textbf{Covalent Bonding}
     \begin{itemize}
-        \item \B{strong}, $e^-$ sharing
+        \item \textbf{strong}, $e^-$ sharing
         \item between similar or identical atoms (e.g. hydrogen, carbon)
         \item formed by sharing outer electron
-        \item prominent in \B{extreme temperatures}
+        \item prominent in \textbf{extreme temperatures}
     \end{itemize}
     \item Metallic Bonding
     \begin{itemize}
@@ -56,46 +56,46 @@
         \item found in metals
         \item not relevant for life
     \end{itemize}
-    \item \B{Van der Waals forces}
+    \item \textbf{Van der Waals forces}
     \begin{itemize}
-        \item \B{very weak}, dipole interaction
-        \item \B{Dipole-dipole forces}
+        \item \textbf{very weak}, dipole interaction
+        \item \textbf{Dipole-dipole forces}
         \begin{itemize}
             \item charge difference across molecules length
             \item two dipoles attract each other
         \end{itemize}
-        \item \B{Induced dipole}
+        \item \textbf{Induced dipole}
         \begin{itemize}
             \item no natural dipole
             \item through induction by dipole/ion
         \end{itemize}
-        \item \B{Dispersion Forces}
+        \item \textbf{Dispersion Forces}
         \begin{itemize}
             \item between all atoms and molecules
             \item due to uneven distribution of electrons in atoms
         \end{itemize}
     \end{itemize}
-    \item \B{Hydrogen Bonding}
+    \item \textbf{Hydrogen Bonding}
     \begin{itemize}
-        \item \B{weak}, dipole interaction
+        \item \textbf{weak}, dipole interaction
         \item in molecules containing OH groups
         \item attraction of electrons of other molecules
     \end{itemize}
 \end{itemize}
 \subsection{Types of biological molecules}
 \begin{itemize}
-    \item \B{Proteins}
+    \item \textbf{Proteins}
     \begin{itemize}
         \item long chains of amino acids
         \item primary, secondary and teriary structures
         \item structural roles
     \end{itemize}
-    \item \B{Sugars}
+    \item \textbf{Sugars}
     \begin{itemize}
         \item energy storage
         \item structural support
     \end{itemize}
-    \item \B{Lipids}
+    \item \textbf{Lipids}
     \begin{itemize}
         \item long chains
         \item energy storage
@@ -115,19 +115,19 @@
     \item origin unknown
 \end{itemize}
 \subsection{Carbon in Life}
-\B{Characteristics}
+\textbf{Characteristics}
 \begin{itemize}
     \item similar bond energies to HNOPS
     \item stable links
     \item wide range of double and triple bond configurations
 \end{itemize}
-\B{Silicon as an alternative}
+\textbf{Silicon as an alternative}
 \begin{itemize}
     \item complex compounds possible
     \item organo-silicon compounds possible
     \item Problem: 
     \begin{itemize}
-        \item \B{very stable, rock-like}
+        \item \textbf{very stable, rock-like}
         \item unlikely around oxygen, oxidates easily
     \end{itemize}
 \end{itemize}
@@ -145,19 +145,19 @@ Characteristics
     \item cosmically abundant
     \item wide temperature range
 \end{itemize}
-\B{Amonia as an alterantive}
+\textbf{Amonia as an alterantive}
 
 \begin{itemize}
     \item solves a lot of chemicals
     \item large heat capacity
     \item less viscous 
-    \item \B{BUT: narrower temperature range}
+    \item \textbf{BUT: narrower temperature range}
 \end{itemize}
-\B{Hydrogen fluoride as an alternative}
+\textbf{Hydrogen fluoride as an alternative}
 \begin{itemize}
     \item wide temperature range
     \item dissolves wide range of substances
-    \item \B{BUT: rare in the universe; tends to destroy organic compounds}
+    \item \textbf{BUT: rare in the universe; tends to destroy organic compounds}
 \end{itemize}
 \subsection{Cell structure}
 Three basic components
@@ -171,7 +171,7 @@ Three basic components
     \item RNA polymerase attaches to DNA sequence
     \item RNA polymerase splits double stranded DNA
     \item single DNA strand gets copied
-    \item RNA polymerase dettaches upon \B{terminator sequence}
+    \item RNA polymerase dettaches upon \textbf{terminator sequence}
 \end{enumerate}
 \subsection{DNA translation}
 \begin{itemize}
@@ -194,13 +194,13 @@ In aerobic organisms:
 \end{itemize}
 \section{Habitability}
 \subsection{The environment}
-\B{Keplers's Laws}
+\textbf{Keplers's Laws}
 \begin{enumerate}
     \item The orbit of each planet is an ellipse with the Sun (or another star) at one focus.
     \item The radius vector to a planet sweeps out equal areas in equal time.
     \item The squares of the sidereal periods of the planets orbits are proportional to the cubes of the semimajor axes of their orbits. ($T^2=ka^3$)
 \end{enumerate}
-\B{Newton's Laws}
+\textbf{Newton's Laws}
 \begin{itemize}
     \item An object moves at a constant velocity if there is no net force acting upon it.
     \item $\vec F = m \vec a$
@@ -275,35 +275,35 @@ Elements in the universe:
 \begin{itemize}
     \item distance from planetary discs center where volatile compounds freeze
     \item frozen particles lead to more mass and therefore bigger planets
-    \item \B{separates terrestrial planets from gas giants}
+    \item \textbf{separates terrestrial planets from gas giants}
 \end{itemize}
 \subsection{Exoplanets}
-\B{Doppler Technique}
+\textbf{Doppler Technique}
 \begin{itemize}
     \item messure starlight and difference in blue/red shift over time
     \item $\frac{\Delta\lambda}{\lambda}=\frac{v_r}{c}$
     \item Finding orbital distance of a planet: $a^3\approx \frac{GM_{Star}}{4\pi^2}P_{Planet}^2$ (Kepler's third law)
-    \item \B{Problem: unknown inclination}
+    \item \textbf{Problem: unknown inclination}
 \end{itemize}
-\B{Transit Method}
+\textbf{Transit Method}
 \begin{itemize}
     \item messure blocked starlight due to transit of planet
     \item amount blocked tells us radius of planet
     \item with period we can determine semi-major axis
 \end{itemize}
-\B{Hot Jupiters}
+\textbf{Hot Jupiters}
 \begin{itemize}
     \item Jupiter mass planet
     \item have to form far away from star (snow line!)
     \item migrate inwards after formation
 \end{itemize}
-\B{Habitable Zone}
+\textbf{Habitable Zone}
 \begin{itemize}
     \item zone within which planets could support life
     \item generally zone where liquid water is possible
     \item zone moves because of change in stars properties
 \end{itemize}
-\B{Internal Heat}
+\textbf{Internal Heat}
 \begin{itemize}
     \item origin
     \begin{itemize}
@@ -325,7 +325,7 @@ Elements in the universe:
         \item magnetic field (protects from harmful rays)
     \end{itemize}
 \end{itemize}
-\B{Atmosphere}
+\textbf{Atmosphere}
 \begin{itemize}
     \item origin
     \begin{itemize}
@@ -347,10 +347,10 @@ Elements in the universe:
         \item breathing
         \item absorbs and scatter light
         \item winds and weather
-        \item \B{greenhouse effect}
+        \item \textbf{greenhouse effect}
     \end{itemize}
 \end{itemize}
-\B{Habitability around non-solar stars}
+\textbf{Habitability around non-solar stars}
 \begin{itemize}
     \item wavelengths
     \item different habitable zone
@@ -362,7 +362,7 @@ Elements in the universe:
 \section{Life}
 \subsection{Definition}
 Life is a self-sustained chemical system capable of undergoing Darwinian evolution.
-\B{Characteristics}
+\textbf{Characteristics}
 \begin{itemize}
     \item It's complex and exhibits complex behaviours.
     \item It grows.
@@ -371,7 +371,7 @@ Life is a self-sustained chemical system capable of undergoing Darwinian evoluti
     \item It evolves.
 \end{itemize}
 \subsection{Origin}
-\B{Interstellar grains}
+\textbf{Interstellar grains}
 \begin{itemize}
     \item siliceous and carbonaceous material
     \item covered in ice
@@ -379,7 +379,7 @@ Life is a self-sustained chemical system capable of undergoing Darwinian evoluti
     \item molecules can accumulate on surface thus overcoming the proximity problem
     \item surface can be heated by solar energy thus overcoming the temperature problem
 \end{itemize}
-\B{Giant Molecular Clouds}
+\textbf{Giant Molecular Clouds}
 \begin{itemize}
     \item $T\approx (30\pm20)K$
     \item $n\approx 10^{6\pm1}cm^{-3}$
@@ -387,26 +387,26 @@ Life is a self-sustained chemical system capable of undergoing Darwinian evoluti
     \item About 100 molecules detected.
     \item Mostly $H_2$.
 \end{itemize}
-\B{Endogenous production of amino acids}
+\textbf{Endogenous production of amino acids}
 \begin{itemize}
     \item can be made from water, methane, ammonia and hydrogen
     \item hydrothermal vents create steam
     \item lightnings allow for reactions
     \item condensation and repetition
 \end{itemize}
-\B{Exogenous arrival of amino acids}
+\textbf{Exogenous arrival of amino acids}
 \begin{itemize}
     \item complex amino acids may be found on meteorites
     \item don't need to be formed on Earth
 \end{itemize}
-\B{RNA world}
+\textbf{RNA world}
 \begin{itemize}
     \item RNA can be enzymes, called ribozymes
     \item ribozymes can catalyze RNA synthesis
     \item therefore RNA might have been the first molecule to reproduce
     \item diversity due to mutations
 \end{itemize}
-\B{Hydrothermal vents as the location for the origin of life}
+\textbf{Hydrothermal vents as the location for the origin of life}
 \begin{itemize}
     \item today we find many microbes, worms and crabs there
     \item Ferrodoxin: ancient iron-sulfur protein
@@ -418,7 +418,7 @@ Life is a self-sustained chemical system capable of undergoing Darwinian evoluti
     \end{itemize}
 \end{itemize}
 \subsection{Classification}
-\B{Hierarchy}
+\textbf{Hierarchy}
 \begin{itemize}
     \item Species
     \item Genus
@@ -429,8 +429,8 @@ Life is a self-sustained chemical system capable of undergoing Darwinian evoluti
     \item Kingdom
     \item Domain
 \end{itemize}
-\B{Binomial nomenclature}: generic name and specific name (genus and species)\\
-\B{Phylogenetic trees}
+\textbf{Binomial nomenclature}: generic name and specific name (genus and species)\\
+\textbf{Phylogenetic trees}
 \begin{itemize}
     \item nodes: branching point
     \item outgroup: species that's very different to cluster of other species
@@ -438,9 +438,9 @@ Life is a self-sustained chemical system capable of undergoing Darwinian evoluti
     \item sister taxa: taxa that are direct result of a node
     \item problem: analogies (different species in same circumstances evolve similarly)
 \end{itemize}
-\B{Molecular phylogentics}\\
+\textbf{Molecular phylogentics}\\
 Comptutation to distinguish homology from analogy.\\
-\B{Testing hypotheses}\\
+\textbf{Testing hypotheses}\\
 Inferences:
 \begin{itemize}
     \item Type 1: Both ancestors have trait
@@ -448,7 +448,7 @@ Inferences:
     \item Type 3: Neither ancestor has trait
 \end{itemize}
 Allows for statements about extinct species.\\
-\B{Complications}
+\textbf{Complications}
 \begin{itemize}
     \item Microorganisms have encorporated others.
     \item Bacteria can take up DNA from the environment.
@@ -498,7 +498,7 @@ Giant Impact Hypothesis:
 \subsection{Differentiation}
 \begin{itemize}
     \item heavier elements move towards the center
-    \item leads to \B{inner and outer core} as well as \B{mantle} and \B{crust}
+    \item leads to \textbf{inner and outer core} as well as \textbf{mantle} and \textbf{crust}
     \item took about 50 million years
 \end{itemize}
 \subsection{Fractionation}
@@ -528,13 +528,13 @@ Giant Impact Hypothesis:
     \item metamorphic
 \end{itemize}
 \subsection{Dating}
-\B{Absolute}
+\textbf{Absolute}
 \begin{itemize}
     \item isotopes get trapped in minerals
     \item decay through time
     \item concentration difference $\Rightarrow$ age
 \end{itemize}
-\B{Relative}
+\textbf{Relative}
 \begin{itemize}
     \item Principle of Superposition
     \item Principle of Original Horizontality
@@ -559,7 +559,7 @@ Reason (a theory):
 \begin{itemize}
     \item atmospheric oxygen reached a threshold after which UV shielding became effective
     \item increase of atmospheric lifetime of oxygen
-    \item GOE marks \B{switch} between the \B{lower} and \B{higher} oxygen steady \B{states}
+    \item GOE marks \textbf{switch} between the \textbf{lower} and \textbf{higher} oxygen steady \textbf{states}
 \end{itemize}
 \subsection{Mass extinctions}
 Evidence for impact at K-T boundary:
@@ -572,7 +572,7 @@ The End-Perminan Extinction:
     \item coincided with final assembly of Pangea and Eruption of Siberian Traps
     \item Mother of all Mass Extinctions
 \end{itemize}
-\B{ONE SPECIES GOES EXTINCT EVERY 20 MINUTES.}
+\textbf{ONE SPECIES GOES EXTINCT EVERY 20 MINUTES.}
 \section{Mars and icy worlds}
 \subsection{Water on ancient Mars}
 \begin{itemize}
@@ -597,7 +597,7 @@ Tidal heating due to eccentric orbit around Jupiter.
 \begin{itemize}
     \item very small
     \item northern hemisphere less active than Europa
-    \item southern hemisphere \B{as active} as Europa, \B{less chaotic}
+    \item southern hemisphere \textbf{as active} as Europa, \textbf{less chaotic}
 \end{itemize}
 \subsection{Subsurface Oceans}
 \begin{itemize}
@@ -636,13 +636,13 @@ Solutions:
     \end{itemize}
 \end{itemize}
 \subsection{Sending signals}
-\B{Pioneer plaques}
+\textbf{Pioneer plaques}
 \begin{itemize}
     \item humans
     \item triangulation maps based on nearest pulsar
     \item problem: cultural bias
 \end{itemize}
-\B{Arecibo message}
+\textbf{Arecibo message}
 \begin{itemize}
     \item contains numbers
     \item 1679 binary digits
